--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Diabetes</string>
+
     <string-array name="gender_array">
         <item>Nam</item>
         <item>Nữ</item>
@@ -15,4 +16,8 @@
         <item>current</item>
     </string-array>
 
+    <string-array name="yes_no_array">
+        <item>No</item>
+        <item>Yes</item>
+    </string-array>
 </resources>
